# gpt-from-scratch

./: .pre-commit-config.yaml  pyproject.toml  train.py
gpt_from_scratch/config/: v1.py
gpt_from_scratch/data/: utils.py
gpt_from_scratch/models/: bigram.py
gpt_from_scratch/tokenizers/: basetokenizer.py  charactertokenizer.py  utils.py
gpt_from_scratch/trainers/: basetrainer.py  bigramtrainer.py
